# sphinx-svcs

./: .gitignore  DIARY.md  LICENSE  README.md  pyproject.toml
src/sphinx_svcs/: __init__.py  builder_init.py
tests/: conftest.py  test_builder_init.py  test_extension.py  test_sphinx_setup.py
tests/roots/test-sphinx-setup/: README.txt  conf.py
tests/roots/test-sphinx-svcs-setup/: conf.py
